--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -11,7 +11,6 @@ body {
 
 .nav-bar {
   display: flex;
-  justify-content: center;
   flex-direction: row;
   height: 48px;
 }
@@ -22,9 +21,12 @@ body {
 }
 
 .nav-bar .nav-i {
-  width: 100%;
+  padding: 0 1%;
   list-style-type: none;
+  text-align: left;
 }
+
+
 
 .nav-i .nav-b {
   background-color: #fff;
